# enigma2-plugin-retrogamestation

./: Makefile.am  README.md  configure.ac
DEBIAN/: control
meta/: Makefile.am  plugin_retrogamestation.xml
script/: Makefile.am  advmame-start  advmenu-start  advmess-start  advmess-start-cart  crispy-doom-start  dgen-start  dosbox-start  gngeo-start  gnuboy-start  pcsx-start  quake-start  retroarch-start  scummvm-start  snes9x-start  stella-start  vice-start
src/: Emulator.py  Makefile.am  RomBrowser.py  __init__.py  plugin.py  skin.xml
src/dgen/: Makefile.am  __init__.py
src/doom/: Makefile.am  __init__.py
src/dosbox/: Makefile.am  __init__.py
src/fbzx/: Makefile.am  __init__.py
src/gngeo/: Makefile.am  __init__.py  gngeorc.default
src/gnuboy/: Makefile.am  __init__.py
src/mame/: Makefile.am  __init__.py  advmess.rc.default
src/pcsx/: Makefile.am  __init__.py
src/quake/: Makefile.am  __init__.py
src/retroarch/: Makefile.am  __init__.py
src/scummvm/: Makefile.am  __init__.py
src/snes/: Makefile.am  __init__.py
src/stella/: Makefile.am  __init__.py
src/vice/: Makefile.am  __init__.py
