installdir = $(bindir)

install_SCRIPTS = \
	advmame-start \
	advmenu-start \
	advmess-start-cart \
	crispy-doom-start \
	dgen-start \
	dosbox-start \
	fbzx-start \
	gngeo-start \
	gnuboy-start \
	pcsx-start \
	quake-start \
	retroarch-start \
	scummvm-start \
	snes9x-start \
	stella-start \
	vice-start
