SUBDIRS = \
	dgen \
	doom \
	dosbox \
	fbzx \
	gngeo \
	gnuboy \
	mame \
	pcsx \
	quake \
	retroarch \
	scummvm \
	snes \
	stella \
	vice

installdir = $(libdir)/enigma2/python/Plugins/Extensions/RetroGameStation

install_PYTHON = \
	__init__.py \
	Emulator.py \
	plugin.py \
	RomBrowser.py

install_DATA = skin.xml
